2014-06-05  Benjamin Poulain  <bpoulain@apple.com>

        [iOS][WK2] Add device orientation
        https://bugs.webkit.org/show_bug.cgi?id=133530

        Reviewed by Tim Horton.

        Change WebKit1 to provide the deviceOrientation as pull instead of push.

        * DefaultDelegates/WebDefaultUIKitDelegate.m:
        (-[WebDefaultUIKitDelegate deviceOrientation]):
        * WebCoreSupport/WebChromeClientIOS.h:
        * WebCoreSupport/WebChromeClientIOS.mm:
        (WebChromeClientIOS::deviceOrientation):
        * WebView/WebUIKitDelegate.h:

2014-05-09  Benjamin Poulain  <benjamin@webkit.org>

        [iOS] Switch geolocation to an explicit authorization query model
        https://bugs.webkit.org/show_bug.cgi?id=132717
        <rdar://problem/16762390>

        Reviewed by Sam Weinig.

        WebGeolocationCoreLocationProvider is the general WebKit wrapper for CoreLocation.

        The old model was to start WebGeolocationCoreLocationProvider and have the start fail or succeed.
        The new model is to explicitely ask for authorization through "requestGeolocationAuthorization", and
        listen to "geolocationAuthorizationGranted" and "geolocationAuthorizationDenied".

        We assume the client of WebGeolocationCoreLocationProvider is well behaved and ask for authorization
        before invoking "start".
        If "start" is called and the authorization is not granted, we assume geolocation was reset since
        the last time authorization was requested, and we reset the client.


        WebGeolocationProviderIOS has been adapted to that model. Instead of doing the "warmup" sequence
        to get the authorization, it queries WebGeolocationCoreLocationProvider explicitly.

        * Misc/WebGeolocationCoreLocationProvider.h:
        * Misc/WebGeolocationCoreLocationProvider.mm:
        (-[WebGeolocationCoreLocationProvider createLocationManager]):
        (-[WebGeolocationCoreLocationProvider dealloc]):